added image resizing

--- a/SilverStripe_Templates.docset/Contents/Info.plist
+++ b/SilverStripe_Templates.docset/Contents/Info.plist
@@ -9,9 +9,9 @@
 	<key>DashDocSetFamily</key>
 	<string>cheatsheet</string>
 	<key>DashDocSetKeyword</key>
-	<string>SS</string>
+	<string>SS SilverStripe</string>
 	<key>DashDocSetPluginKeyword</key>
-	<string>SS</string>
+	<string>SS SilverStripe</string>
 	<key>DocSetPlatformFamily</key>
 	<string>cheatsheet</string>
 	<key>dashIndexFilePath</key>
